--- a/src/Table.css
+++ b/src/Table.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-gap: 10px 10px;
   grid-template-columns: auto repeat(auto-fill, auto);
-  padding: 10px;
   justify-content: center;
   justify-items: center;
+  padding-top: 60px
 }
