--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
+  min-height: 100%;
+  min-width: 1400px;
+  overflow-x: visible;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,4 +14,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h3{
+  text-align: center;
+  color: white;
+  font-size: 56px;
 }
