Used JSON data to populate table.

--- a/src/Table.css
+++ b/src/Table.css
@@ -1,18 +1,29 @@
 .Table{
   display: grid;
-  grid-gap: 5px 5px;
+  grid-gap: 3px 3px;
   grid-template-columns: auto repeat(auto-fill, auto);
   justify-content: center;
-  justify-items: center;
-  padding-top: 0px
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
-.Table-footer{
+.Table-details{
   text-align: center;
+  justify-content: center;
   color: white;
   font-size: 24px;
+  margin-top: 0px;
+  margin-bottom: 60px;
+  bottom: 150px;
+}
+
+.Table-selector{
+  text-align: left;
+  color: white;
+  font-size: 24px;
+  margin-top: 20px;
   margin-left: 70px;
-  margin-bottom: 30px;
+  margin-bottom: 5px;
   position: absolute;
-  bottom: 10px;
+  bottom: -50px;
 }
